Mobile code complete
Mobile layout correct

--- a/index.html
+++ b/index.html
@@ -35,12 +35,17 @@
 	</header>
 	
 	<div class="container"> 
-		<section class="intro herotext">The Responsive Cat Enthusiast
-			<a href="#" class="btn-readmore">Read More</a>
+		<section class="intro">
+			<p class="herotext">The Responsive Cat Enthusiast</p>
+			<div class="wrapper">
+    			<button class="btn-readmore">Read More</button>
+			</div>
+
+			
 		</section>
 
 		<section class="about">
-			<p>About Me</p>
+			<p class="aboutheading">About Me</p>
 
 			<p> The domestic cat is a small, typically furry, carnivorous mammal. They are often
       called house cats when kept as indoor pets or simply cats when there is no need to distinguish
@@ -50,47 +55,54 @@
 			</section>
 
 		<section class="services"> 
-			<p> Services </p>
+			<p class="servicesheading"> Services </p>
 
 			<div class="column">
-				<p> Kitten Entertainment </p>
+				<p class="subheadings"> Kitten Entertainment </p>
 
-				<p> Get a cat they said. it'll be fun they said. Well, they were right. Cats are awesome! </p>
+				<img src="images/cat_1.jpg" alt="Cat1">
+
+				<p class="text"> Get a cat they said. it'll be fun they said. Well, they were right. Cats are awesome! </p>
 
 				</div>
 
 			<div class="column">
 
-				<p>Kitten Counselling</p>
+				<p class="subheadings">Kitten Counselling</p>
 
-				<p> Wish you had a secret decoder guide to cat behavior and cat language? Heres a primer to things your car wishes you understood. </p>
+				<img src="images/cat_2.jpg" alt="Cat2">
+
+				<p class="text"> Wish you had a secret decoder guide to cat behavior and cat language? Heres a primer to things your car wishes you understood. </p>
 
 				</div>
 
 			<div class="column">
 
-			<p>Kitten Rehabilitation</p>
+			<p class="subheadings">Kitten Rehabilitation</p>
 
-			<p> Your cat's online owners manual, featuring articles about breed information, cat selection, training, grooming and care for cats and kittens.</p>
+			<img src="images/cat_3.jpg" alt="Cat3">
+
+			<p class="text"> Your cat's online owners manual, featuring articles about breed information, cat selection, training, grooming and care for cats and kittens.</p>
 
 			</div>
 
 		</section>
 
 		<section class="contact">
-			<p> Contact Me </p>
+			<p class="contactheading"> Contact Me </p>
 
 			<p> Get in touch with me if you'd like to come visit - I'd love to show you around! </p>
 
-			<p> Email: kittencare@rwd.co.za </p>
+			<p> <b>Email:</b> <a href="mailto:kittencare@rwd.co.za"> kittencare@rwd.co.za</a></p>
 
-			<p> Mobile: 082 123 4567</p>
-
-
+			<p> <b>Mobile:</b> 082 123 4567</p>
 
 			</section>
 
-		<footer></footer>
+		<footer>
+			Copyright &copy; 2018 Cat obsessed. All Rights Reserved.
+
+		</footer>
 	</div>
 
 
