--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <title>Responsive layout Example</title>
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	
-   
 	<!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<![endif]-->
+	  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+	<![endif]-->
 	<link rel="icon" type="image/png" href="images/favicon.png">
 	<script src="js/jquery-1.11.2.js"></script>
 	<script src="js/menu.js"></script>
@@ -19,7 +17,7 @@
 	<header>
 		<div class="row">
 			<a class="logo" href="javascript:void(0)">
-			<img src="images/logo.png" alt="Logo_image">
+				<img src="images/logo.png" alt="Logo_image">
 			</a>
 			<a class="menuBtn" href="javascript:void(0)" id="toggle"></a>
 		</div>
@@ -28,85 +26,61 @@
 			<a href="#about-me">About Me</a>
 			<a href="#services">Services</a>
 			<a href="#contact-me">Contact Me</a>
-			
 		</nav>
-		
-
 	</header>
-	
+
 	<div class="container"> 
 		<section class="intro">
 			<p class="herotext">The Responsive Cat Enthusiast</p>
-			<div class="wrapper">
-    			<button class="btn-readmore">Read More</button>
-			</div>
-
-			
+			<button class="btn-readmore">Read More</button>
 		</section>
 
 		<section class="about">
 			<p class="aboutheading">About Me</p>
-
-			<p> The domestic cat is a small, typically furry, carnivorous mammal. They are often
-      called house cats when kept as indoor pets or simply cats when there is no need to distinguish
-       them from other felids and felines. Cats are awesome, I love them very much. Please follow
-       on twitter, I am so lonely.</p>
-
-			</section>
+			<p>The domestic cat is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. Cats are awesome, I love them very much. Please follow on twitter, I am so lonely.</p>
+		</section>
 
 		<section class="services"> 
 			<p class="servicesheading"> Services </p>
+			<div class="row">
+				<div class="column">
+					<p class="subheadings"> Kitten Entertainment </p>
 
-			<div class="column">
-				<p class="subheadings"> Kitten Entertainment </p>
+					<img src="images/cat_1.jpg" alt="Cat1">
 
-				<img src="images/cat_1.jpg" alt="Cat1">
-
-				<p class="text"> Get a cat they said. it'll be fun they said. Well, they were right. Cats are awesome! </p>
-
-				</div>
-
-			<div class="column">
-
-				<p class="subheadings">Kitten Counselling</p>
-
-				<img src="images/cat_2.jpg" alt="Cat2">
-
-				<p class="text"> Wish you had a secret decoder guide to cat behavior and cat language? Heres a primer to things your car wishes you understood. </p>
+					<p class="text"> Get a cat they said. it'll be fun they said. Well, they were right. Cats are awesome! </p>
 
 				</div>
 
-			<div class="column">
+				<div class="column">
 
-			<p class="subheadings">Kitten Rehabilitation</p>
+					<p class="subheadings">Kitten Counselling</p>
 
-			<img src="images/cat_3.jpg" alt="Cat3">
+					<img src="images/cat_2.jpg" alt="Cat2">
 
-			<p class="text"> Your cat's online owners manual, featuring articles about breed information, cat selection, training, grooming and care for cats and kittens.</p>
+					<p class="text"> Wish you had a secret decoder guide to cat behavior and cat language? Heres a primer to things your car wishes you understood. </p>
 
+				</div>
+
+				<div class="column">
+
+					<p class="subheadings">Kitten Rehabilitation</p>
+
+					<img src="images/cat_3.jpg" alt="Cat3">
+
+					<p class="text"> Your cat's online owners manual, featuring articles about breed information, cat selection, training, grooming and care for cats and kittens.</p>
+				</div>
 			</div>
-
 		</section>
 
 		<section class="contact">
 			<p class="contactheading"> Contact Me </p>
-
 			<p> Get in touch with me if you'd like to come visit - I'd love to show you around! </p>
-
 			<p> <b>Email:</b> <a href="mailto:kittencare@rwd.co.za"> kittencare@rwd.co.za</a></p>
-
 			<p> <b>Mobile:</b> 082 123 4567</p>
+		</section>
 
-			</section>
-
-		<footer>
-			Copyright &copy; 2018 Cat obsessed. All Rights Reserved.
-
-		</footer>
+		<footer>Copyright &copy; 2018 Cat obsessed. All Rights Reserved.</footer>
 	</div>
-
-
-
-
 </body>
 </html>
